--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,10 +11,14 @@
   "keywords": [],
   "description": "",
   "dependencies": {
-    "auto-bind": "4.0.0",
+    "auto-bind": "^4.0.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "mogoose": "^0.0.1-security",
-    "mongoose": "^8.6.3",
-    "nodemon": "^3.1.4"
+    "mongoose": "^8.7.0",
+    "nodemon": "^3.1.7",
+    "require": "^2.4.20"
   }
 }
