--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "auto-bind": "4.0.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.6.3",
     "nodemon": "^3.1.4"
