--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1", 
-     "build": "npm install"
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,8 @@
   "dependencies": {
     "auto-bind": "4.0.0",
     "dotenv": "^16.4.5",
+    "eslint": "^9.12.0",
+    "eslint-plugin-regex": "^1.10.0",
     "express": "^4.21.0",
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.6.3",
