--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,11 +1,6 @@
 name: Lint Code Base
 
-on: 
-  push:
-    branches:
-      - main  
-  pull_request:
-      - main
+on: [push, pull_request]
 
 jobs:
   lint:
@@ -18,10 +13,10 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14' 
+        node-version: '16' 
 
     - name: Install dependencies
       run: npm install
 
     - name: Run ESLint
-      run: npx eslint .  
+      run: npx eslint .
