--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "auto-bind": "4.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint": "^9.12.0",
     "eslint-plugin-regex": "^1.10.0",
