--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.12.0",
     "eslint-plugin-regex": "^1.10.0",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.6.3",
     "nodemon": "^3.1.4"
